related project alignment fixed

--- a/public/stylesheets/sites/layout.css
+++ b/public/stylesheets/sites/layout.css
@@ -175,7 +175,7 @@ div#header div.right form.search span.input_search input[type="submit"] {positio
 div#map {width:100%; height:475px; background:#99B3CA; border-bottom:2px solid white; border-top:2px solid white; display:inline-block; vertical-align:top; zoom:1; *display:inline;}
 div#map.home {border-top:none;}
 
-div#small_map {width:100%; height:280px; background:#99B3CA; border-top:2px solid white; border-bottom:2px solid white;}
+div#small_map {width:100%; height:335px; background:#99B3CA; border-top:2px solid white; border-bottom:2px solid white;}
 a#zoomIn {position:absolute; display:none; width:26px; height:25px; background:url('/images/sites/maps/zoom_in.png') no-repeat 0 0; z-index:100;}
 a#zoomIn:hover {background-position:0 -25px;}
 a#zoomOut {position:absolute; display:none; width:26px; height:25px; background:url('/images/sites/maps/zoom_out.png') no-repeat 0 0; z-index:100;}
@@ -508,11 +508,11 @@ div.projects div.float_left div.block ul.related_projects li {float:left; width:
 div.projects div.float_left div.block ul.related_projects li.last {margin:0;}
 div.projects div.float_left div.block ul.related_projects li div.image {float:left; width:90px; height:70px; margin:0 10px 0 0; padding:5px; background:#E5E5E5; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
 div.projects div.float_left div.block ul.related_projects li div.image img {float:left; width:90px; height:70px;}
-div.projects div.float_left div.block ul.related_projects li div.info {float:left;width:170px; padding:10px 0 0 0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
+div.projects div.float_left div.block ul.related_projects li div.info {float:left;width:170px; padding:5px 0 0 0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
 div.projects div.float_left div.block ul.related_projects li div.info h4 a {font:normal 15px Arial; color:#CD5D4C; text-decoration:none;} 
 div.projects div.float_left div.block ul.related_projects li div.info h4 a:hover {text-decoration:underline;}
 div.projects div.float_left div.block ul.related_projects li div.info p {padding:3px 0 0 0; font:normal 13px Arial; color:#999999;}
-div.projects div.float_left div.block ul.related_projects li div.info p.sub {padding:10px 0 0 0; color:#666666;}
+div.projects div.float_left div.block ul.related_projects li div.info p.sub {padding:7px 0 0 0; color:#666666;}
 div.projects div.right {float:left; width:300px; height:auto; margin:0; padding:0;}
 div.projects div.right div.block {float:left; width:265px; margin:23px 0 0 0; border-bottom:1px solid #D4D4D4; padding:0 0 20px 35px;}
 div.projects div.right div.block.last {border:none; padding:0 0 0 30px;}
